--- a/templates/admin/menu.html
+++ b/templates/admin/menu.html
@@ -41,10 +41,10 @@
 
       <div class="list">
 
-        <a class="item item-rounded text-blue margin" ui-sref="menu.berandaAdmin()" menu-close="">
+        <!-- <a class="item item-rounded text-blue margin" ui-sref="menu.berandaAdmin()" menu-close="">
           <ion-icon name="home-sharp" class="icon"></ion-icon>
-          Beranda
-        </a>
+          Profil
+        </a> -->
         <a class="item item-rounded text-blue margin" ng-click="logout()">
           <ion-icon name="log-out-sharp" class="icon"></ion-icon>
           Keluar
