--- a/templates/admin/beranda/beranda.html
+++ b/templates/admin/beranda/beranda.html
@@ -1,74 +1,6 @@
-<ion-view title="Beranda Admin" id="berandaAdmin">
+<ion-view title="Chat" id="berandaAdmin">
   <ion-content padding="false" class="has-header">
     <div class="bg-gradient-blue" style="min-height: 35vh;">
-      <ion-slides disable-side-menu-drag=""
-        options="{'loop': true,'initialSlide':0,'direction':horizontal,'speed':500,'autoplay':2000,'grabCursor':true}"
-        slider="slider1" delegate-handle="slider1" style="width:100%;height:200px;">
-        <ion-slide-page>
-          <div class="spacer" style="width: 320px; height: 0px;"></div>
-          <div class="row responsive-md" style="margin: auto;">
-            <div class="col col-50 col-offset-25">
-              <div class="row" style="margin: auto">
-                <div class="col col-50">
-                  <img src="img/pnsbackground.png" style="display: block; margin-left: auto; margin-right: auto;">
-                </div>
-                <div class="col col-50" style="padding-left: 10px">
-                  <h4 style="color:white;">DATA CENTER</h4>
-                  <div class="show-list-numbers-and-dots">
-                    <p style="color:white;font-size: 12px"><strong>Gudang Data Guru Se-Kabupaten Buleleng <br> Input dan
-                        Lihat Data Guru Dengan Mudah dan Cepat</strong>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </ion-slide-page>
-
-        <ion-slide-page>
-          <div class="spacer" style="width: 320px; height: 0px;"></div>
-          <div class="row responsive-md" style="margin: auto;">
-            <div class="col col-50 col-offset-25">
-              <div class="row" style="margin: auto">
-                <div class="col col-50">
-                  <img src="img/gurubackground.png" style="display: block; margin-left: auto; margin-right: auto;">
-                </div>
-                <div class="col col-50" style="padding-left: 10px">
-                  <h4 style="color:white;">DATA CENTER</h4>
-                  <div class="show-list-numbers-and-dots">
-                    <p style="color:white;font-size: 12px"><strong>Gudang Data Guru Se-Kabupaten Buleleng <br> Input dan
-                        Lihat Data Guru Dengan Mudah dan Cepat</strong>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </ion-slide-page>
-
-        <ion-slide-page>
-          <div class="spacer" style="width: 320px; height: 0px;"></div>
-          <div class="row responsive-md" style="margin: auto;">
-            <div class="col col-50 col-offset-25">
-              <div class="row" style="margin: auto">
-                <div class="col col-50">
-                  <img src="img/guru2.png" style="display: block; margin-left: auto; margin-right: auto;">
-                </div>
-                <div class="col col-50" style="padding-left: 10px">
-                  <h4 style="color:white;">DATA CENTER</h4>
-                  <div class="show-list-numbers-and-dots">
-                    <p style="color:white;font-size: 12px"><strong>Gudang Data Guru Se-Kabupaten Buleleng <br> Input dan
-                        Lihat Data Guru Dengan Mudah dan Cepat</strong>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </ion-slide-page>
-
-      </ion-slides>
     </div>
   </ion-content>
 </ion-view>
